# litmus

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_eval_entities.py  0003_run_progress.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: catalog.py  compare.py  datasets.py  deps.py  health.py  projects.py  runs.py
backend/app/core/: __init__.py  registry.py
backend/app/db/: base.py  mixins.py  session.py
backend/app/engine/: __init__.py  bootstrap.py  compare.py  execution.py  metrics.py  retry.py  runner.py
backend/app/evaluators/: __init__.py  base.py  calibration.py  exact_match.py  json_schema.py  llm_judge.py  regex_match.py
backend/app/models/: __init__.py  case_result.py  dataset.py  eval_run.py  project.py  test_case.py
backend/app/providers/: __init__.py  _http.py  anthropic.py  base.py  mistral.py  mock.py  ollama.py  openai.py  registry_utils.py  scripted.py
backend/app/schemas/: __init__.py  compare.py  dataset.py  project.py  run.py
backend/app/targets/: __init__.py  base.py  http_target.py  provider_target.py
backend/tests/: conftest.py  test_bootstrap.py  test_calibration.py  test_catalog.py  test_cloud_providers.py  test_compare.py  test_compare_api.py  test_concurrency.py  test_config.py  test_dataset_uploads.py  test_exact_match.py  test_execution.py  test_health.py  test_http_target.py  test_json_schema.py  test_llm_judge.py  test_metrics.py  test_migrations.py  test_mock_provider.py  test_models.py  test_ollama_provider.py  test_provider_pooling.py  test_regex_match.py  test_registry.py  test_retry.py  test_runner.py  test_runs_api.py  test_scripted_provider.py  test_targets.py
docs/: DEPLOY.md  PORTFOLIO_BLURB.md
examples/: baseline.json  demo_target.py  litmus.yaml  sdk_quickstart.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  (+2 more)
sdk/: README.md  pyproject.toml
sdk/litmus/: __init__.py  cli.py  client.py  compare.py  config.py  evaluators.py  metrics.py  models.py  runner.py
sdk/tests/: test_cli.py  test_client.py  test_compare.py  test_metrics.py  test_runner.py
(+29 files in other folders)
